src/antlr4/StructureParser.js
// Generated from Structure.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import StructureListener from './StructureListener.js';
import StructureVisitor from './StructureVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class StructureParser extends antlr4.Parser {

    static grammarFileName = "Structure.g4";
    static literalNames = [ null, null, null, null, null, "'string'", "'reference'", 
                            "'integer'", "'float'", "'boolean'", "'datetime'", 
                            "'bytes'", "'funnel'", "'invert'", "'->'", "'='", 
                            "'{'", "'}'", "'['", "']'", "'('", "')'", "','", 
                            "'.'", "':'", "'*'", "'-'" ];
    static symbolicNames = [ null, "V", "M", "R", "F", "STRING", "REFERENCE", 
                             "INTEGER", "FLOAT", "BOOLEAN", "DATETIME", 
                             "BYTES", "FUNNEL", "INVERT", "ARROW", "EQUALS", 
                             "LC", "RC", "LS", "RS", "LP", "RP", "COMMA", 
                             "DOT", "COLON", "STAR", "MINUS", "QUANTIFIER", 
                             "ID", "WS" ];
    static ruleNames = [ "struct", "def", "v_def", "m_def", "r_def", "f_def", 
                         "field_pair_list", "field_pair", "fieldRef", "field", 
                         "type", "map_type", "multi_value", "single_value", 
                         "l_def", "expr", "funnel", "invert", "subject" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = StructureParser.ruleNames;
        this.literalNames = StructureParser.literalNames;
        this.symbolicNames = StructureParser.symbolicNames;
    }



	struct() {
	    let localctx = new StructContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, StructureParser.RULE_struct);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 41;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 268447774) !== 0)) {
	            this.state = 38;
	            this.def();
	            this.state = 43;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 44;
	        this.match(StructureParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def() {
	    let localctx = new DefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, StructureParser.RULE_def);
	    try {
	        this.state = 51;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 46;
	            this.v_def();
	            break;
	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 47;
	            this.m_def();
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 48;
	            this.r_def();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 49;
	            this.f_def();
	            break;
	        case 12:
	        case 13:
	        case 28:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 50;
	            this.l_def();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	v_def() {
	    let localctx = new V_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, StructureParser.RULE_v_def);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 53;
	        this.match(StructureParser.V);
	        this.state = 54;
	        this.match(StructureParser.LP);
	        this.state = 55;
	        this.match(StructureParser.ID);
	        this.state = 56;
	        this.match(StructureParser.COMMA);
	        this.state = 57;
	        this.map_type();
	        this.state = 58;
	        this.match(StructureParser.RP);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	m_def() {
	    let localctx = new M_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, StructureParser.RULE_m_def);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 60;
	        this.match(StructureParser.M);
	        this.state = 61;
	        this.match(StructureParser.LP);
	        this.state = 62;
	        this.match(StructureParser.ID);
	        this.state = 63;
	        this.match(StructureParser.COMMA);
	        this.state = 64;
	        this.map_type();
	        this.state = 65;
	        this.match(StructureParser.RP);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	r_def() {
	    let localctx = new R_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, StructureParser.RULE_r_def);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this.match(StructureParser.R);
	        this.state = 68;
	        this.match(StructureParser.LP);
	        this.state = 69;
	        this.match(StructureParser.ID);
	        this.state = 70;
	        this.match(StructureParser.COMMA);
	        this.state = 71;
	        this.match(StructureParser.ID);
	        this.state = 72;
	        this.match(StructureParser.COMMA);
	        this.state = 73;
	        this.match(StructureParser.QUANTIFIER);
	        this.state = 74;
	        this.match(StructureParser.COMMA);
	        this.state = 75;
	        this.match(StructureParser.ID);
	        this.state = 76;
	        this.match(StructureParser.RP);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	f_def() {
	    let localctx = new F_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, StructureParser.RULE_f_def);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 78;
	        this.match(StructureParser.F);
	        this.state = 79;
	        this.match(StructureParser.LP);
	        this.state = 80;
	        this.match(StructureParser.ID);
	        this.state = 81;
	        this.match(StructureParser.COMMA);
	        this.state = 82;
	        this.match(StructureParser.ID);
	        this.state = 83;
	        this.match(StructureParser.COMMA);
	        this.state = 84;
	        this.field_pair_list();
	        this.state = 85;
	        this.match(StructureParser.RP);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	field_pair_list() {
	    let localctx = new Field_pair_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, StructureParser.RULE_field_pair_list);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 87;
	        this.match(StructureParser.LC);
	        this.state = 97;
	        this._errHandler.sync(this);
	        switch (this._input.LA(1)) {
	        case 25:
	        	this.state = 88;
	        	this.match(StructureParser.STAR);
	        	break;
	        case 28:
	        	this.state = 89;
	        	this.field_pair();
	        	this.state = 94;
	        	this._errHandler.sync(this);
	        	_la = this._input.LA(1);
	        	while(_la===22) {
	        	    this.state = 90;
	        	    this.match(StructureParser.COMMA);
	        	    this.state = 91;
	        	    this.field_pair();
	        	    this.state = 96;
	        	    this._errHandler.sync(this);
	        	    _la = this._input.LA(1);
	        	}
	        	break;
	        case 17:
	        	break;
	        default:
	        	break;
	        }
	        this.state = 99;
	        this.match(StructureParser.RC);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	field_pair() {
	    let localctx = new Field_pairContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, StructureParser.RULE_field_pair);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this.fieldRef();
	        this.state = 102;
	        this.match(StructureParser.ARROW);
	        this.state = 103;
	        this.fieldRef();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldRef() {
	    let localctx = new FieldRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, StructureParser.RULE_fieldRef);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(StructureParser.ID);
	        this.state = 110;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 106;
	            this.match(StructureParser.DOT);
	            this.state = 107;
	            this.match(StructureParser.ID);
	            this.state = 112;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	field() {
	    let localctx = new FieldContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, StructureParser.RULE_field);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 113;
	        this.match(StructureParser.ID);
	        this.state = 114;
	        this.match(StructureParser.COLON);
	        this.state = 115;
	        this.type();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type() {
	    let localctx = new TypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, StructureParser.RULE_type);
	    try {
	        this.state = 120;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	        case 6:
	        case 7:
	        case 8:
	        case 9:
	        case 10:
	        case 11:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 117;
	            this.single_value();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 118;
	            this.multi_value();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 119;
	            this.map_type();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	map_type() {
	    let localctx = new Map_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, StructureParser.RULE_map_type);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(StructureParser.LC);
	        this.state = 131;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===28) {
	            this.state = 123;
	            this.field();
	            this.state = 128;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===22) {
	                this.state = 124;
	                this.match(StructureParser.COMMA);
	                this.state = 125;
	                this.field();
	                this.state = 130;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 133;
	        this.match(StructureParser.RC);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multi_value() {
	    let localctx = new Multi_valueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, StructureParser.RULE_multi_value);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        this.match(StructureParser.LS);
	        this.state = 136;
	        this.type();
	        this.state = 137;
	        this.match(StructureParser.RS);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	single_value() {
	    let localctx = new Single_valueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, StructureParser.RULE_single_value);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 139;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 4064) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	l_def() {
	    let localctx = new L_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, StructureParser.RULE_l_def);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 141;
	        this.expr();
	        this.state = 142;
	        this.match(StructureParser.EQUALS);
	        this.state = 143;
	        this.match(StructureParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, StructureParser.RULE_expr);
	    try {
	        this.state = 148;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 12:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 145;
	            this.funnel();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 146;
	            this.invert();
	            break;
	        case 28:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 147;
	            this.subject();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funnel() {
	    let localctx = new FunnelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, StructureParser.RULE_funnel);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 150;
	        this.match(StructureParser.FUNNEL);
	        this.state = 151;
	        this.match(StructureParser.LP);
	        this.state = 152;
	        this.expr();
	        this.state = 157;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===22) {
	            this.state = 153;
	            this.match(StructureParser.COMMA);
	            this.state = 154;
	            this.expr();
	            this.state = 159;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 160;
	        this.match(StructureParser.RP);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	invert() {
	    let localctx = new InvertContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, StructureParser.RULE_invert);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162;
	        this.match(StructureParser.INVERT);
	        this.state = 163;
	        this.match(StructureParser.LP);
	        this.state = 164;
	        this.expr();
	        this.state = 165;
	        this.match(StructureParser.RP);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	subject() {
	    let localctx = new SubjectContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, StructureParser.RULE_subject);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 167;
	        this.match(StructureParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

StructureParser.EOF = antlr4.Token.EOF;
StructureParser.V = 1;
StructureParser.M = 2;
StructureParser.R = 3;
StructureParser.F = 4;
StructureParser.STRING = 5;
StructureParser.REFERENCE = 6;
StructureParser.INTEGER = 7;
StructureParser.FLOAT = 8;
StructureParser.BOOLEAN = 9;
StructureParser.DATETIME = 10;
StructureParser.BYTES = 11;
StructureParser.FUNNEL = 12;
StructureParser.INVERT = 13;
StructureParser.ARROW = 14;
StructureParser.EQUALS = 15;
StructureParser.LC = 16;
StructureParser.RC = 17;
StructureParser.LS = 18;
StructureParser.RS = 19;
StructureParser.LP = 20;
StructureParser.RP = 21;
StructureParser.COMMA = 22;
StructureParser.DOT = 23;
StructureParser.COLON = 24;
StructureParser.STAR = 25;
StructureParser.MINUS = 26;
StructureParser.QUANTIFIER = 27;
StructureParser.ID = 28;
StructureParser.WS = 29;

StructureParser.RULE_struct = 0;
StructureParser.RULE_def = 1;
StructureParser.RULE_v_def = 2;
StructureParser.RULE_m_def = 3;
StructureParser.RULE_r_def = 4;
StructureParser.RULE_f_def = 5;
StructureParser.RULE_field_pair_list = 6;
StructureParser.RULE_field_pair = 7;
StructureParser.RULE_fieldRef = 8;
StructureParser.RULE_field = 9;
StructureParser.RULE_type = 10;
StructureParser.RULE_map_type = 11;
StructureParser.RULE_multi_value = 12;
StructureParser.RULE_single_value = 13;
StructureParser.RULE_l_def = 14;
StructureParser.RULE_expr = 15;
StructureParser.RULE_funnel = 16;
StructureParser.RULE_invert = 17;
StructureParser.RULE_subject = 18;

class StructContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StructureParser.RULE_struct;
    }

	EOF() {
	    return this.getToken(StructureParser.EOF, 0);
	};

	def = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DefContext);
	    } else {
	        return this.getTypedRuleContext(DefContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.enterStruct(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.exitStruct(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof StructureVisitor ) {
	        return visitor.visitStruct(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DefContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StructureParser.RULE_def;
    }

	v_def() {
	    return this.getTypedRuleContext(V_defContext,0);
	};

	m_def() {
	    return this.getTypedRuleContext(M_defContext,0);
	};

	r_def() {
	    return this.getTypedRuleContext(R_defContext,0);
	};

	f_def() {
	    return this.getTypedRuleContext(F_defContext,0);
	};

	l_def() {
	    return this.getTypedRuleContext(L_defContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.enterDef(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.exitDef(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof StructureVisitor ) {
	        return visitor.visitDef(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class V_defContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StructureParser.RULE_v_def;
    }

	V() {
	    return this.getToken(StructureParser.V, 0);
	};

	LP() {
	    return this.getToken(StructureParser.LP, 0);
	};

	ID() {
	    return this.getToken(StructureParser.ID, 0);
	};

	COMMA() {
	    return this.getToken(StructureParser.COMMA, 0);
	};

	map_type() {
	    return this.getTypedRuleContext(Map_typeContext,0);
	};

	RP() {
	    return this.getToken(StructureParser.RP, 0);
	};

	enterRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.enterV_def(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.exitV_def(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof StructureVisitor ) {
	        return visitor.visitV_def(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class M_defContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StructureParser.RULE_m_def;
    }

	M() {
	    return this.getToken(StructureParser.M, 0);
	};

	LP() {
	    return this.getToken(StructureParser.LP, 0);
	};

	ID() {
	    return this.getToken(StructureParser.ID, 0);
	};

	COMMA() {
	    return this.getToken(StructureParser.COMMA, 0);
	};

	map_type() {
	    return this.getTypedRuleContext(Map_typeContext,0);
	};

	RP() {
	    return this.getToken(StructureParser.RP, 0);
	};

	enterRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.enterM_def(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.exitM_def(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof StructureVisitor ) {
	        return visitor.visitM_def(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class R_defContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StructureParser.RULE_r_def;
    }

	R() {
	    return this.getToken(StructureParser.R, 0);
	};

	LP() {
	    return this.getToken(StructureParser.LP, 0);
	};

	ID = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(StructureParser.ID);
	    } else {
	        return this.getToken(StructureParser.ID, i);
	    }
	};


	COMMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(StructureParser.COMMA);
	    } else {
	        return this.getToken(StructureParser.COMMA, i);
	    }
	};


	QUANTIFIER() {
	    return this.getToken(StructureParser.QUANTIFIER, 0);
	};

	RP() {
	    return this.getToken(StructureParser.RP, 0);
	};

	enterRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.enterR_def(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.exitR_def(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof StructureVisitor ) {
	        return visitor.visitR_def(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class F_defContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StructureParser.RULE_f_def;
    }

	F() {
	    return this.getToken(StructureParser.F, 0);
	};

	LP() {
	    return this.getToken(StructureParser.LP, 0);
	};

	ID = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(StructureParser.ID);
	    } else {
	        return this.getToken(StructureParser.ID, i);
	    }
	};


	COMMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(StructureParser.COMMA);
	    } else {
	        return this.getToken(StructureParser.COMMA, i);
	    }
	};


	field_pair_list() {
	    return this.getTypedRuleContext(Field_pair_listContext,0);
	};

	RP() {
	    return this.getToken(StructureParser.RP, 0);
	};

	enterRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.enterF_def(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.exitF_def(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof StructureVisitor ) {
	        return visitor.visitF_def(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Field_pair_listContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StructureParser.RULE_field_pair_list;
    }

	LC() {
	    return this.getToken(StructureParser.LC, 0);
	};

	RC() {
	    return this.getToken(StructureParser.RC, 0);
	};

	STAR() {
	    return this.getToken(StructureParser.STAR, 0);
	};

	field_pair = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Field_pairContext);
	    } else {
	        return this.getTypedRuleContext(Field_pairContext,i);
	    }
	};

	COMMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(StructureParser.COMMA);
	    } else {
	        return this.getToken(StructureParser.COMMA, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.enterField_pair_list(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.exitField_pair_list(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof StructureVisitor ) {
	        return visitor.visitField_pair_list(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Field_pairContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StructureParser.RULE_field_pair;
    }

	fieldRef = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FieldRefContext);
	    } else {
	        return this.getTypedRuleContext(FieldRefContext,i);
	    }
	};

	ARROW() {
	    return this.getToken(StructureParser.ARROW, 0);
	};

	enterRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.enterField_pair(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof StructureListener ) {
	        listener.exitField_pair(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof StructureVisitor ) {
	        return visitor.visitField_pair(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FieldRefContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = StructureParser.RULE_fieldRef;
    }
